fixed minor alignments and variable rendering

--- a/src/sass/budget.styles.scss
+++ b/src/sass/budget.styles.scss
@@ -112,7 +112,7 @@ select option {
     position: sticky;
     top: 1rem;
     height: 6rem;
-    z-index: 4;
+    // z-index: 3;
     padding-top: 0.7rem;
     margin: 0 0.5rem;
     text-shadow: -2px -2px 9px black;
