--- a/src/sass/home.styles.scss
+++ b/src/sass/home.styles.scss
@@ -1,13 +1,9 @@
 #cover {
     display: grid;
-    flex-wrap: wrap;
-    // grid-template-columns: 3rem 50rem 7rem;
-    // grid-template-rows: 22rem 9rem 27rem;
     grid-template-columns: 1fr 10fr 1fr;
-    grid-template-rows: 2.5fr 1fr 2.5fr;
     grid-template-rows: repeat(2, 1fr);
-    height: 100vh;
-    width: 100vw;
+    max-height: 100vh;
+    max-width: 100vw;
     background: linear-gradient(20deg, #050f13 18%, #1D617A 58%, #050f13 60%, #1D617A 60%, #050f13 95%);
     justify-content: center;
 }
@@ -102,13 +98,15 @@
 
 #content {
     height: 27rem;
+    max-width: 800px;
     overflow: scroll;
-    overflow-x: hidden;
+    // overflow-x: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
     font-family: "Montserrat", sans-serif;
     color: #CCE0D2;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     grid-row: 2;
     grid-column: 2;
     // align-self: start;
@@ -128,10 +126,9 @@
 
 .intro {
     font-size: 1.2rem;
+    max-width: 630px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
+    flex-wrap: wrap;
     line-height: 0rem;
 }
 
